[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'fuelow-runtime-wasm'
version = '1.0.0'
[dependencies.fuelow-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['fuelow-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
